// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token snapshot renders 1`] = `
<span
  className="tokenRootClass token"
  dangerouslySetInnerHTML={
    Object {
      "__html": "foo bar",
    }
  }
/>
`;

exports[`token snapshot renders with brs 1`] = `
<span
  className="tokenRootClass token"
  dangerouslySetInnerHTML={
    Object {
      "__html": "foo <br>bar",
    }
  }
/>
`;
